2002-10-15  Christopher Faylor  <cgf@redhat.com>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Reset.
	(child_info_fork::mount_table): Remove.
	(child_info_fork::myself_addr): Remove.
	* fork.cc (fork_child): Don't set either of the above.
	* dcrt0.cc (dll_crt0_1): Call memory_init as early as possible.
	* fhandler_console.cc (console_state): Move to shared_info.h.
	(fhandler_console::get_tty_stuff): Reflect open_shared arg change.
	* pinfo.cc (myself_addr): Remove definition.
	(pinfo::init): Get myself address from open_shared.
	* pinfo.h (myself_addr): Remove declaration.
	* shared.cc (open_shared): Rework so that known shared memory locations
	are protected.  Take shared memory type as fifth argument.
	(memory_init): Reflect open_shared arg change.
	* shared_info.h (shared_locations): New enum.
	(console_state): Move here.
	(open_shared): Reflect open_shared arg change in declaration.

2002-10-14  Christopher Faylor  <cgf@redhat.com>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Reset.
	(child_info_fork::heaptop): Remove obsolete element.
	(child_info_fork::heabbase): Ditto.
	(child_info_fork::heapptr): Ditto.
	(child_info_fork::mount_table): New element.
	(child_info_fork::myself_addr): Ditto.
	* dcrt0.cc (dll_crt0_1): Set mount_table and myself_addr when forking.
	(initial_env): Add newline to "sleeping" message.
	* dll_init.cc (reserve_upto): Accommodate cygwin heap when freeing
	memory.  Make debugging output a little more descriptive.
	* fork.cc (fork_parent): Save mount_table and myself_addr.
	* pinfo.cc (myself_addr): New variable.
	(set_myself): Pass PID_MYSELF flag to init.
	(pinfo::Init): Honor PID_MYSELF.  Save address where myself shared
	memory resides in myself_addr, for fork.
	* pinfo.h (myself_addr): Declare.
	* shared.cc (memory_init): On fork, use previously saved address for
	location of mount table.
	* include/sys/cygwin.h (PID_MYSELF): New value.

	* dtable.cc (dtable::stdio_init): Don't pass access type to