@@ -47,6 +47,7 @@ static NO_COPY wincaps wincap_unknown = {
   has_64bit_file_access:false,
   has_process_io_counters:false,
   supports_reading_modem_output_lines:false,
+  needs_memory_protection:false
 };
 
 static NO_COPY wincaps wincap_95 = {
@@ -85,6 +86,7 @@ static NO_COPY wincaps wincap_95 = {
   has_64bit_file_access:false,
   has_process_io_counters:false,
   supports_reading_modem_output_lines:false,
+  needs_memory_protection:false
 };
 
 static NO_COPY wincaps wincap_95osr2 = {
@@ -123,6 +125,7 @@ static NO_COPY wincaps wincap_95osr2 = {
   has_64bit_file_access:false,
   has_process_io_counters:false,
   supports_reading_modem_output_lines:false,
+  needs_memory_protection:false
 };
 
 static NO_COPY wincaps wincap_98 = {
@@ -161,6 +164,7 @@ static NO_COPY wincaps wincap_98 = {
   has_64bit_file_access:false,
   has_process_io_counters:false,
   supports_reading_modem_output_lines:false,
+  needs_memory_protection:false
 };
 
 static NO_COPY wincaps wincap_98se = {
@@ -199,6 +203,7 @@ static NO_COPY wincaps wincap_98se = {
   has_64bit_file_access:false,
   has_process_io_counters:false,
   supports_reading_modem_output_lines:false,
+  needs_memory_protection:false
 };
 
 static NO_COPY wincaps wincap_me = {
@@ -237,6 +242,7 @@ static NO_COPY wincaps wincap_me = {
   has_64bit_file_access:false,
   has_process_io_counters:false,
   supports_reading_modem_output_lines:false,
+  needs_memory_protection:false
 };
 
 static NO_COPY wincaps wincap_nt3 = {
@@ -275,6 +281,7 @@ static NO_COPY wincaps wincap_nt3 = {
   has_64bit_file_access:true,
   has_process_io_counters:false,
   supports_reading_modem_output_lines:true,
+  needs_memory_protection:true
 };
 
 static NO_COPY wincaps wincap_nt4 = {
@@ -313,6 +320,7 @@ static NO_COPY wincaps wincap_nt4 = {
   has_64bit_file_access:true,
   has_process_io_counters:false,
   supports_reading_modem_output_lines:true,
+  needs_memory_protection:true
 };
 
 static NO_COPY wincaps wincap_nt4sp4 = {
@@ -351,6 +359,7 @@ static NO_COPY wincaps wincap_nt4sp4 = {
   has_64bit_file_access:true,
   has_process_io_counters:false,
   supports_reading_modem_output_lines:true,
+  needs_memory_protection:true
 };
 
 static NO_COPY wincaps wincap_2000 = {
@@ -389,6 +398,7 @@ static NO_COPY wincaps wincap_2000 = {
   has_64bit_file_access:true,
   has_process_io_counters:true,
   supports_reading_modem_output_lines:true,
+  needs_memory_protection:true
 };
 
 static NO_COPY wincaps wincap_xp = {
@@ -427,6 +437,7 @@ static NO_COPY wincaps wincap_xp = {
   has_64bit_file_access:true,
   has_process_io_counters:true,
   supports_reading_modem_output_lines:true,
+  needs_memory_protection:true
 };
 
 wincapc wincap;
